[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/whiteSquare_255A.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Movers/Bouncer.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Movers/MoverDirectionDisplay.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Bouncer" type="RigidBody2D" groups=["Entities"]]
collision_layer = 2
collision_mask = 3
mode = 3
contacts_reported = 999999
contact_monitor = true
script = ExtResource( 2 )
config_options = [ "delete", "flip_direction" ]
bounce_force = 35.0

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.0470588, 0.584314, 0, 1 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 1 )

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MoverDirectionDisplay" parent="." instance=ExtResource( 3 )]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="mover_position_updated" from="." to="." method="_on_mover_position_update"]
